--- a/docs/beautiful.css
+++ b/docs/beautiful.css
@@ -90,6 +90,33 @@ cursor: pointer;
   font-weight: bold;
 }
 
+.btn-add {
+  float: left;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: white;
+  font-weight: bold;
+  border: 1px solid #0e5ba3;
+  background: #1caf23;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 5;
+}
+
+#add-node-menu {
+  display: none;
+  position: absolute;
+  top: 8%;
+  left: 3%;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
 .btn-export {
   float: right;
   position: absolute;
@@ -163,7 +190,7 @@ cursor: pointer;
 
 #drawflow {
   position: relative;
-  width: calc(100vw - 301px);
+  width: 100%;
   height: calc(100% - 50px);
   top: 40px;
   background: var(--background-color);
