--- a/docs/beautiful.css
+++ b/docs/beautiful.css
@@ -5,7 +5,8 @@
   --background-box-title: #f7f7f7;
 }
 
-html, body {
+html,
+body {
   margin: 0px;
   padding: 0px;
   width: 100vw;
@@ -19,13 +20,16 @@ header {
   border-bottom: 1px solid var(--border-color);
   padding-left: 20px;
 }
+
 header h2 {
   margin: 0px;
   line-height: 66px;
 }
+
 header a {
   color: black;
 }
+
 .them-edit-link {
   position: absolute;
   top: 10px;
@@ -33,11 +37,12 @@ header a {
   color: black;
   font-size: 40px;
 }
+
 .them-edit-link a {
   text-decoration: none;
 }
 
-.github-link{
+.github-link {
   position: absolute;
   top: 10px;
   right: 20px;
@@ -64,6 +69,7 @@ header a {
   cursor: move;
   user-select: none;
 }
+
 .menu {
   position: absolute;
   height: 40px;
@@ -71,6 +77,7 @@ header a {
   background: white;
   width: 100%;
 }
+
 .menu ul {
   padding: 0px;
   margin: 0px;
@@ -79,11 +86,11 @@ header a {
 
 .menu ul li {
   display: inline-block;
-margin-left: 10px;
-border-right: 1px solid var(--border-color);
-padding-right: 10px;
-line-height: 40px;
-cursor: pointer;
+  margin-left: 10px;
+  border-right: 1px solid var(--border-color);
+  padding-right: 10px;
+  line-height: 40px;
+  cursor: pointer;
 }
 
 .menu ul li.selected {
@@ -117,6 +124,18 @@ cursor: pointer;
   z-index: 1;
 }
 
+#import-menu {
+  display: none;
+  position: absolute;
+  top: 8%;
+  left: 86%;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+}
+
 .btn-export {
   float: right;
   position: absolute;
@@ -132,11 +151,32 @@ cursor: pointer;
   z-index: 5;
 }
 
+.btn-import {
+  float: right;
+  position: absolute;
+  top: 10px;
+  right: 90px;
+  color: white;
+  font-weight: bold;
+  border: 1px solid #33a539;
+  background: #4eff57;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 5;
+}
+
+.file-input {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
 .btn-clear {
   float: right;
   position: absolute;
   top: 10px;
-  right: 85px;
+  right: 175px;
   color: white;
   font-weight: bold;
   border: 1px solid #96015b;
@@ -146,8 +186,9 @@ cursor: pointer;
   cursor: pointer;
   z-index: 5;
 }
-.swal-wide{
-    width:80% !important;
+
+.swal-wide {
+  width: 80% !important;
 }
 
 .btn-lock {
@@ -180,10 +221,12 @@ cursor: pointer;
   border-right: 1px solid var(--border-color);
   z-index: 5;
 }
+
 .bar-zoom svg {
   cursor: pointer;
   padding-left: 10px;
 }
+
 .bar-zoom svg:nth-child(1) {
   padding-left: 0px;
 }
@@ -196,17 +239,19 @@ cursor: pointer;
   background: var(--background-color);
   background-size: 25px 25px;
   background-image:
-   linear-gradient(to right, #f1f1f1 1px, transparent 1px),
-   linear-gradient(to bottom, #f1f1f1 1px, transparent 1px);
+    linear-gradient(to right, #f1f1f1 1px, transparent 1px),
+    linear-gradient(to bottom, #f1f1f1 1px, transparent 1px);
 }
 
 @media only screen and (max-width: 768px) {
   .col {
     width: 50px;
   }
+
   .col .drag-drawflow span {
-    display:none;
+    display: none;
   }
+
   #drawflow {
     width: calc(100vw - 51px);
   }
@@ -225,7 +270,7 @@ cursor: pointer;
   width: 200px;
 }
 
-.drawflow .drawflow-node.selected  {
+.drawflow .drawflow-node.selected {
   background: white;
   border: 1px solid #4ea9ff;
   -webkit-box-shadow: 0 2px 20px 2px #4ea9ff;
@@ -242,13 +287,15 @@ cursor: pointer;
   stroke-width: 3px;
 }
 
-.drawflow .drawflow-node .input, .drawflow .drawflow-node .output {
+.drawflow .drawflow-node .input,
+.drawflow .drawflow-node .output {
   height: 15px;
   width: 15px;
   border: 2px solid var(--border-color);
 }
 
-.drawflow .drawflow-node .input:hover, .drawflow .drawflow-node .output:hover {
+.drawflow .drawflow-node .input:hover,
+.drawflow .drawflow-node .output:hover {
   background: #4ea9ff;
 }
 
@@ -261,7 +308,7 @@ cursor: pointer;
   background: white;
 }
 
-.drawflow > .drawflow-delete {
+.drawflow>.drawflow-delete {
   border: 2px solid #43b993;
   background: white;
   color: #43b993;
@@ -278,22 +325,27 @@ cursor: pointer;
 }
 
 .drawflow-node .title-box {
-  height: 50px;
-  line-height: 50px;
+  /* height: 50px; */
+  line-height: 25px;
   background: var(--background-box-title);
   border-bottom: 1px solid #e9e9e9;
   border-radius: 4px 4px 0px 0px;
-  padding-left: 10px;
+  padding: 10px;
+  word-wrap: break-word;
+  white-space: normal;
+  overflow: hidden;
 }
+
 .drawflow .title-box svg {
   position: initial;
 }
+
 .drawflow-node .box {
-  padding: 10px 20px 20px 20px;
+  padding: 10px 10px 0px 20px;
   font-size: 14px;
   color: #555555;
-
 }
+
 .drawflow-node .box p {
   margin-top: 5px;
   margin-bottom: 5px;
@@ -307,7 +359,9 @@ cursor: pointer;
   border-radius: 4px;
 }
 
-.drawflow-node input, .drawflow-node select, .drawflow-node textarea {
+.drawflow-node input,
+.drawflow-node select,
+.drawflow-node textarea {
   border-radius: 4px;
   border: 1px solid var(--border-color);
   height: 30px;
@@ -328,9 +382,11 @@ cursor: pointer;
   text-align: center;
   color: white;
 }
+
 .drawflow-node.personalized .input {
   background: yellow;
 }
+
 .drawflow-node.personalized .output {
   background: green;
 }
@@ -343,10 +399,11 @@ cursor: pointer;
   stroke: var(--border-color);
   stroke-width: 2;
   fill: white;
-  
+
 }
 
-.drawflow .connection .point.selected, .drawflow .connection .point:hover {
+.drawflow .connection .point.selected,
+.drawflow .connection .point:hover {
   fill: #4ea9ff;
 }
 
@@ -361,18 +418,20 @@ cursor: pointer;
   width: 100vw;
   height: 100vh;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.7);
 
 }
 
 .modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
+  /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 400px; /* Could be more or less, depending on screen size */
+  width: 400px;
+  /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
@@ -381,7 +440,7 @@ cursor: pointer;
   float: right;
   font-size: 28px;
   font-weight: bold;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 768px) {
